New Features Added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <main id="noteArea">
        
     </main>
-
-    <script src="index.js"></script>
+<!--     
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt reprehenderit totam voluptatum nam corrupti consectetur facilis odio, inventore excepturi sint labore unde voluptas officia suscipit dicta, corporis nostrum accusantium nemo vero. Alias eligendi, in sint odit commodi iure possimus, animi, ducimus voluptatem dolores expedita aliquid! Similique ratione nam vel adipisci voluptate quis a nobis non debitis! Atque voluptatem cumque, quisquam nostrum repellat soluta consequatur porro necessitatibus iusto tenetur culpa, aspernatur quos! Accusantium eos temporibus quaerat velit provident veniam et voluptate quidem quibusdam dicta. Sapiente provident quas, atque natus quo fuga rem ullam ipsam aperiam quibusdam, possimus iste voluptatem ex cupiditate.
+     -->
+<script src="index.js"></script>
 </body>
 </html>
