--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Notes</title>
-    <link rel="stylesheet" href="./index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./index.css" />
+  </head>
+  <body>
     <header class="head-container">
-         <h1 id="header" class="header">Note Pad</h1>
-         <p class="title-text">Title</p>
-         <input type="text" id="title" class="title">
-         <textarea name="body" id="body" cols="35" rows="5" class="body"></textarea>
-         <button id="add" class="add">Add</button>
+      <h1 id="header" class="header">Note Pad</h1>
+      <p class="title-text">Title</p>
+      <input type="text" id="title" class="title" />
+      <textarea
+        name="body"
+        id="body"
+        cols="35"
+        rows="5"
+        class="body"
+      ></textarea>
+      <button id="add" class="add">Add</button>
     </header>
-    <main id="noteArea">
-       
-    </main>
-<!--     
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt reprehenderit totam voluptatum nam corrupti consectetur facilis odio, inventore excepturi sint labore unde voluptas officia suscipit dicta, corporis nostrum accusantium nemo vero. Alias eligendi, in sint odit commodi iure possimus, animi, ducimus voluptatem dolores expedita aliquid! Similique ratione nam vel adipisci voluptate quis a nobis non debitis! Atque voluptatem cumque, quisquam nostrum repellat soluta consequatur porro necessitatibus iusto tenetur culpa, aspernatur quos! Accusantium eos temporibus quaerat velit provident veniam et voluptate quidem quibusdam dicta. Sapiente provident quas, atque natus quo fuga rem ullam ipsam aperiam quibusdam, possimus iste voluptatem ex cupiditate.
-     -->
-<script src="index.js"></script>
-</body>
+    <main id="noteArea"></main>
+
+    <script src="index.js"></script>
+  </body>
 </html>
