--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
       ></textarea>
       <button id="add" class="add">Add</button>
     </header>
-    <main id="noteArea"></main>
+    <main >
+      <div id="noteArea">
+
+      </div>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
