Local Storage Saving Added

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
       ></textarea>
       <button id="add" class="add">Add</button>
     </header>
-    <main >
-      <div id="noteArea">
-
-      </div>
+    <main>
+      <div id="noteArea"></div>
     </main>
     <script src="index.js"></script>
   </body>
